src/style.css
@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans&display=swap');
@import url('https://fonts.googleapis.com/css?family=Merriweather&display=swap');

@keyframes appear {
    from {opacity: 0; transform: translateY(10px);} 
    to {opacity: 1; transform: none;}
}

/* Firefox < 16 */
@-moz-keyframes appear {
    from {opacity: 0; transform: translateY(10px);} 
    to {opacity: 1; transform: none;}
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes appear {
    from {opacity: 0; transform: translateY(10px);} 
    to {opacity: 1; transform: none;}
}

/* Internet Explorer */
@-ms-keyframes appear {
    from {opacity: 0; transform: translateY(10px);} 
    to {opacity: 1; transform: none;}
}

/* Opera < 12.1 */
@-o-keyframes appear {
    from {opacity: 0; transform: translateY(10px);} 
    to {opacity: 1; transform: none;}
}


header {
    display: grid;
    /* grid-template-areas: "name" "nav-bar"; */
    grid-template-columns: 230px 1fr;
    
}

html {
    scroll-behavior: smooth;
}


p {
    font-family: 'Merriweather Sans', sans-serif;
    color: white;
    text-align: left;
    
}

.call-to-action p {
    text-align: center;
}

h1 {
    font-family: 'Merriweather Sans', sans-serif;
    font-weight: strong;
    color: white;
    display: inline-block;
    grid-column: 1 / 2;
    width: fit-content;
}

header nav {
    grid-column: 2 / 3;
    align-content: end;
}

h2 {
    font-family: 'Merriweather', serif;
    color: white;
    font-weight: lighter;
}

h3 {
    font-family: 'Merriweather', serif;
    color: white;
    font-weight: lighter;
}

li {
    font-family: 'Merriweather Sans', sans-serif;
    color: white;
    text-align: left;
    line-height: 2em;
}

a {
    font-family: 'Merriweather Sans', sans-serif;
    text-decoration: none;
    color:#DEC79B;
    text-transform: uppercase;
    transition: color 0.2s ease-in;
}

a:hover {
    color: grey;
  }

a.email-link {
    text-transform: lowercase;
}

code {
    /* the code tag text looks weird probs fix it */
}


img {
    box-shadow: 5px 10px 30px black;
}

.twitter-tweet {
    box-shadow: 5px 10px 30px black;
    height: auto;
}

body {
    display: grid;
    grid-template-areas: 
    "header"
    "content"
    "footer";
    background-color: #121212;
    
}

header {
    grid-area: header;
    padding: 0;
    padding-left: 20px;
}

.content {
    grid-area: content;
    text-align: center;
    margin: 0 auto;
    -webkit-animation: appear 0.5s ease-in-out forwards; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: appear 0.5s ease-in-out forwards; /* Firefox < 16 */
        -ms-animation: appear 0.5s ease-in-out forwards; /* Internet Explorer */
         -o-animation: appear 0.5s ease-in-out forwards; /* Opera < 12.1 */
            animation: appear 0.5s ease-in-out forwards;

}

#resume {
    /* height: 2480px auto;
    width: 3508px auto; */
}

#view-resume-pdf-link {
    margin: 20px 0;
    display: block;
}

footer {
    grid-area: footer;
    display: grid;
    justify-content: center;
}

footer div {
    display: block;
    text-align: center;
}

footer p {
    display: block;
    /* margin: 0;
    padding: 0; */
    text-align: center;
}

footer nav {
    display: block;
    text-align: center;
    height: 60px;
}



body header nav ul {
    padding: 0;
    padding-top: 30px;
    display: flex;
    justify-content: space-around;
    
    list-style-type: none;
    margin: 0;
}


.social-media-icon {
    height: 28px;
    width: 28px;
    color: #DEC79B;
    
}

div.social-links {
    /* padding: 0;
    list-style: none; */
}

#back-to-top-icon {
    height: 25px;
    width: 25px;
}

#about-me {
    display: grid;
    grid-template-columns: 320px 1fr;
    grid-template-rows: 1fr 3fr;
    width: 730px;
    margin: 30px auto;
}

#about-me img {
    order: -1;
    grid-row: 1 / 3;
}

#about-me p {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    height: fit-content;
}

#about-me h2 {
    
}


.content h2 {
    text-align: center;
}

.content h3 {
    text-align: center;
}

.content nav {
    /* text-align: center; */
}

.content nav h3 {
    display: inline;
    width: 50%;
}

.project-nav {
    text-align: unset;
    display: flex;
    justify-content: space-between;
}

nav h2 {
    display: block;
    
}

.previous-project-nav {
    float: left;
}
.next-project-nav {
   float: right;
}

blockquote {
    text-align: center;
}




@media screen and (prefers-color-scheme: light) {
    body {
        background-color: white;
        color: black;
    }
}


.nav-movile {
    display: none;
    position: absolute;
}

i {
    
    
}

.fa {
    color: #DEC79B;
    font-size: 200px;
    height: 40px;
    width: 40px;
}

i.fa-bars {
    display: none;
    padding: 20px;
    float: right;
    margin-right: 15px;
}

.what-i-learned {
    background-color: #4C4C4C;
    box-shadow: 5px 10px 30px black;
    
}

figcaption p {
    text-align: center;
    color: #636363;
}

figure {
    display: flex;
    /* border: 1px solid black ; */
    box-shadow: 5px 10px 30px black;
}

figure img {
    width: auto;
}

figcaption {
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 70%;
    padding: 10px;
}

#terminal-ear-training img {
    float: right;
}



/* styling and animating the mobile menu */
.menu-wrap {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 1:
}

.menu-wrap .toggler {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 2;
    cursor: pointer;
    width: 50px;
    height: 50px;
    opacity: 0;
}

.menu-wrap .hamburger {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1;
    width: 60px;
    height: 60px;
    padding: 1rem;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
}

/* hamburger line */
.menu-wrap .hamburger > div {
    position: relative;
    width: 100%;
    height: 2px;
    background-color: #DEC79B; /* edit this */
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.4s ease;
}

/* style for top and bottom lines */
.menu-wrap .hamburger > div:before, 
.menu-wrap .hamburger > div:after {
   content: '';
   position: absolute;
   z-index: 1;
   top: -10px;
   width: 100%;
   height: 2px;
   background: inherit;
}

/* moves line down */
.menu-wrap .hamburger > div:after {
    top: 10px;
}

/* toggler animate */
.menu-wrap .toggler:checked + .hamburger > div {
    transform: rotate(135deg);
}

/* turns lines into x */
.menu-wrap .toggler:checked + .hamburger > div:before,
.menu-wrap .toggler:checked + .hamburger > div:after {
    top:0;
    transform: rotate(90deg);
}

/* rotate on hover when checked */
.menu-wrap .toggler:checked:hover + .hamburger > div {
    transform: rotate(225deg);
}

/* show menu */
.menu-wrap .toggler:checked ~ .menu {
    visibility: visible;
}

.menu-wrap .toggler:checked ~ .menu > div {
    transform: scale(1);
    transition-duration: 0.4s
}

.menu-wrap .toggler:checked ~ .menu > div > div {
    opacity: 0;
    transition: opacity 0.4s ease;
}


.menu-wrap .menu {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    visibility: hidden;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}

.menu-wrap .menu > div {
    background: rgba(0, 0, 0, 0.5);
    border-radius: 50%;
    width: 200vw;
    height: 200vw;
    display: flex;
    flex: none;
    align-items: center;
    justify-content: center;
    transform: scale(0);
    transition: all 0.4s ease;
}

.menu-wrap .menu > div > div {
    text-align: center;
    max-width: 90vw;
    max-width: 100vh;
    opacity: 0;
    transition: opacity 0.4s ease;
}

.menu-wrap .menu > div > div > ul > li {
    list-style: none;
    /* color: #fff; */
    font-size: 1.5rem;
    padding: 1rem;
}

.menu-wrap .menu > div > div > ul > li {
    color: inherit;
    /* text-decoration: none; */
    transition: color 0.4s ease;
}




/* .what-i-learned li, .what-i-learned h3 {
    color: black;
} */

i:hover {
    color: grey;
}

/* don't display full header for mobile */
/* if the width of the screen is too small, the image will be first followed by the h2 then p. */
@media screen and (max-width: 700px) {
    /* start of phone styles */
    body header nav {
        display: none;
    }
    .nav-mobile {
        display: inline;
        
    }

    i.fa-bars {
        display: inline;
    }

    

    /* .nav-mobile:touch-action: ; */

    }

